fix bust win condition scoring and redeal button style on small screen

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -348,12 +348,12 @@ main {
 
     .reDeal {
         margin: auto;
-        width: 7rem;
+        width: 10rem;
         position: absolute;
-        left: calc(50% - 3.5rem);
-        bottom: calc(50% + 3.5rem);
-        font-size: 1rem;
+        left: calc(50% - 5rem);
+        top: 20.5rem;
     }
+    
 
     .bettingArea {
         position: relative;
